[package]
name = "pheromessage"
version = "0.1.0"
edition = "2021"
authors = ["Mostafa Elhemali"]
description = "Implementation of gossip protocol for keeping an eventually consistent data structure"
license = "MIT"

[dependencies]
rand = { version = "0.8" }
postcard = { version = "1.0", optional = true, features = ["alloc"] }
serde = { version = "1.0", optional = true }

[features]
postcard = ["dep:postcard", "dep:serde"]

[[example]]
name = "lset"

[dev-dependencies]
rayon = { version = "1" }
clap = { version = "4.1", features = ["derive"] }
log = { version = "0.4" }
simple_logger = { version = "4", features = ["timestamps"] }
